Fix flexbox on mobile safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,6 +76,7 @@ body {
   top: 60px;
   bottom: 0;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 
@@ -84,12 +85,24 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: flex;
+
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 .md-bookshelf-item {
   min-width: 270px;
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
   flex-grow: 1;
 }
 
